// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds-focus() > should return correct css for opts: { offset: '3px', borderRadius: '6px' } 1`] = `
"div {
  border-radius: 6px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 3px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() > should return correct css for opts: { offset: 'none', borderRadius: 'medium' } 1`] = `
"div {
  border-radius: 8px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 0;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() > should return correct css for opts: { offset: 'small', borderRadius: 'small' } 1`] = `
"div {
  border-radius: 4px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 2px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;

exports[`pds-focus() > should return correct css for opts: {} 1`] = `
"div {
  border-radius: 4px;
}
div:focus {
  outline: 2px solid #1a44ea;
  outline-offset: 2px;
}
div:focus:not(:focus-visible) {
  outline-color: transparent;
}"
`;
